corpus/comments.txt
================================================================================
Balance with some comment lines
================================================================================

; this is a comment
* this also
2012-12-12 balance Assets:Test 50.00 EUR

; one more comment

--------------------------------------------------------------------------------

(beancount_file
  (balance
    (date)
    (account)
    (amount
      (number)
      (currency))))

================================================================================
Transaction with some comment lines
================================================================================

; this is a comment
* this also

2012-12-12 * "asdf"
    ; one more comment
    Assets:Test  30.00 EUR
    ; inline comment
    Assets:Test  -30.00 USD
; one more comment

--------------------------------------------------------------------------------

(beancount_file
  (transaction
    (date)
    (flag)
    (string)
    (postings
      (posting
        (account)
        (amount
          (number)
          (currency)))
      (posting
        (account)
        (amount
          (unary_num_expr
            (number))
          (currency))))))
