corpus/directives.txt
================================================================================
Commodity
================================================================================

2012-12-12 commodity EUR

--------------------------------------------------------------------------------

(beancount_file
  (commodity
    (date)
    (currency)))

================================================================================
Close
================================================================================

2012-12-12 close Assets:Test
2012-12-12 close Assets:Äeäæœëgþst
  metadata: "string value"

--------------------------------------------------------------------------------

(beancount_file
  (close
    (date)
    (account))
  (close
    (date)
    (account)
    (metadata
      (key_value
        (key)
        (string)))))

================================================================================
Custom
================================================================================

2012-12-12 custom "test" "string" Account:Name
    
2012-12-12 custom "test" "string" Account:Name

--------------------------------------------------------------------------------

(beancount_file
  (custom
    (date)
    (string)
    (string)
    (account))
  (custom
    (date)
    (string)
    (string)
    (account)))

================================================================================
Document
================================================================================

2012-12-12 document Assets:Test "Test.pdf"
2033-12-12 document Assets:Äeäæœëgþst "/home/test/a-file.pdf" #tag

--------------------------------------------------------------------------------

(beancount_file
  (document
    (date)
    (account)
    (string))
  (document
    (date)
    (account)
    (string)
    (tags_and_links
      (tag))))

================================================================================
Event
================================================================================

2012-12-12 event "test" "asdf"
  key: TRUE
  key2: 20 USD

--------------------------------------------------------------------------------

(beancount_file
  (event
    (date)
    (string)
    (string)
    (metadata
      (key_value
        (key)
        (bool))
      (key_value
        (key)
        (amount
          (number)
          (currency))))))

================================================================================
Open
================================================================================

2012-12-12 open Assets:Test
2012-12-12 open Assets:Test USD, EUR "string"
2012-12-12 open Assets:Test "string"

--------------------------------------------------------------------------------

(beancount_file
  (open
    (date)
    (account))
  (open
    (date)
    (account)
    (currency_list
      (currency)
      (currency))
    (string))
  (open
    (date)
    (account)
    (string)))

================================================================================
Pad
================================================================================

2012-12-12 pad Assets:Äeäæœëgþst Assets:Äeäæœëgþst

--------------------------------------------------------------------------------

(beancount_file
  (pad
    (date)
    (account)
    (account)))

================================================================================
Query
================================================================================

2012-12-12 query "test" "test"

--------------------------------------------------------------------------------

(beancount_file
  (query
    (date)
    (string)
    (string)))

================================================================================
Note
================================================================================

2012-12-12 note Assets:Äeäæœëgþst "test"

--------------------------------------------------------------------------------

(beancount_file
  (note
    (date)
    (account)
    (string)))
