corpus/transactions.txt
================================================================================
Simple transactions
================================================================================

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test  -30.00 USD

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test   ; comment in posting line

--------------------------------------------------------------------------------

(beancount_file
  (transaction
    (date)
    (flag)
    (string)
    (postings
      (posting
        (account)
        (amount
          (number)
          (currency)))
      (posting
        (account)
        (amount
          (unary_num_expr
            (number))
          (currency)))))
  (transaction
    (date)
    (flag)
    (string)
    (postings
      (posting
        (account)
        (amount
          (number)
          (currency)))
      (posting
        (account))))
  (transaction
    (date)
    (flag)
    (string)
    (postings
      (posting
        (account)
        (amount
          (number)
          (currency)))
      (posting
        (account)))))

================================================================================
Transaction with cost spec
================================================================================

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR {2012-12-12, "lot-name"}
    Assets:Test  30.00 EUR {30.00 USD}
    Assets:Test  30.00 EUR {30.00 # 20 USD}
    Assets:Test  30.00 {*}
    Assets:Test

--------------------------------------------------------------------------------

(beancount_file
  (transaction
    (date)
    (flag)
    (string)
    (postings
      (posting
        (account)
        (amount
          (number)
          (currency))
        (cost
          (date)
          (string)))
      (posting
        (account)
        (amount
          (number)
          (currency))
        (cost
          (compound_amount
            (number)
            (currency))))
      (posting
        (account)
        (amount
          (number)
          (currency))
        (cost
          (compound_amount
            (number)
            (number)
            (currency))))
      (posting
        (account)
        (incomplete_amount
          (number))
        (cost
          (merge)))
      (posting
        (account)))))

================================================================================
Transaction
================================================================================

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test  30.00
    Assets:Test  30.00 {}
    Assets:Test  30.00 EUR {} @
    Assets:Test  30.00 {} @@
    Assets:Test  30.00 {{}} @@
    Assets:Test  10.00 EUR {20.00 USD} @ 20.00 USD
    Assets:Test  EUR
    Assets:Test

--------------------------------------------------------------------------------

(beancount_file
  (transaction
    (date)
    (flag)
    (string)
    (postings
      (posting
        (account)
        (amount
          (number)
          (currency)))
      (posting
        (account)
        (incomplete_amount
          (number)))
      (posting
        (account)
        (incomplete_amount
          (number))
        (cost))
      (posting
        (account)
        (amount
          (number)
          (currency))
        (cost)
        (price_annotation))
      (posting
        (account)
        (incomplete_amount
          (number))
        (cost)
        (total_price_annotation))
      (posting
        (account)
        (incomplete_amount
          (number))
        (total_cost)
        (total_price_annotation))
      (posting
        (account)
        (amount
          (number)
          (currency))
        (cost
          (compound_amount
            (number)
            (currency)))
        (price_annotation
          (amount
            (number)
            (currency))))
      (posting
        (account)
        (incomplete_amount
          (currency)))
      (posting
        (account)))))
