test/corpus/date_formats.txt
======================
Date with dashes ISO
======================

2013-05-18 * "Transaction with ISO date"
    Assets:Bank 100 USD
    Expenses:Food -100 USD

---

(file
    (transaction
        (date)
        (txn)
        (narration)
        (posting (account) (incomplete_amount (number) (currency)))
        (posting (account) (incomplete_amount (unary_number_expr (minus) (number)) (currency)))
    )
)

======================
Date with slashes
======================

2013/05/18 * "Transaction with slash date"
    Assets:Bank 100 USD
    Expenses:Food -100 USD

---

(file
    (transaction
        (date)
        (txn)
        (narration)
        (posting (account) (incomplete_amount (number) (currency)))
        (posting (account) (incomplete_amount (unary_number_expr (minus) (number)) (currency)))
    )
)

======================
Mixed date formats
======================

2014-02-03 open Assets:US:BofA:Checking
2014/03/15 open Assets:US:BofA:Savings

2014-04-10 * "Mixed dates in file"
    Assets:US:BofA:Checking 500 USD
    Assets:US:BofA:Savings -500 USD

---

(file
    (open (date) (account))
    (open (date) (account))
    (transaction
        (date)
        (txn)
        (narration)
        (posting (account) (incomplete_amount (number) (currency)))
        (posting (account) (incomplete_amount (unary_number_expr (minus) (number)) (currency)))
    )
)
