test/corpus/document_directive.txt
======================
Document directive basic
======================

2013-05-18 document Assets:US:BestBank:Checking "/Accounting/statement.pdf"

---

(file
    (document
        (date)
        (account)
        (filename (string))
    )
)

======================
Document with spaces in path
======================

2013-05-18 document Assets:US:BestBank:Checking "/Accounting/My Documents/statement.pdf"

---

(file
    (document
        (date)
        (account)
        (filename (string))
    )
)

======================
Document with metadata
======================

2013-05-18 document Assets:US:BestBank:Checking "/path/to/statement.pdf"
    receipt: "TRUE"
    description: "January statement"

---

(file
    (document
        (date)
        (account)
        (filename (string))
        (key_value (key) (value (string)))
        (key_value (key) (value (string)))
    )
)

======================
Document with UTF-8 path
======================

2013-05-18 document Assets:银行:账户 "/文件/账单.pdf"

---

(file
    (document
        (date)
        (account)
        (filename (string))
    )
)

======================
Multiple documents
======================

2013-01-01 document Assets:US:Bank:Checking "/docs/jan.pdf"
2013-02-01 document Assets:US:Bank:Checking "/docs/feb.pdf"
2013-03-01 document Assets:US:Bank:Saving "/docs/mar.pdf"

---

(file
    (document (date) (account) (filename (string)))
    (document (date) (account) (filename (string)))
    (document (date) (account) (filename (string)))
)
