test/corpus/multiline_string.txt
===========================
Multiline with leading digit (not date)
===========================

2026-01-13 * "Count:
100 items in stock"
  Assets:Bank 10 USD

---

(file
    (transaction
        (date)
        (txn)
        (narration)
        (posting (account) (incomplete_amount (number) (currency)))
    )
)

===========================
Multiline with indented digit
===========================

2026-01-13 * "Count:
  100 items"
  Assets:Bank 10 USD

---

(file
    (transaction
        (date)
        (txn)
        (narration)
        (posting (account) (incomplete_amount (number) (currency)))
    )
)
